@@ -1,4 +1,5 @@
 v1.10 (patch 1):
+- Change stack mode shortcut to Shift-D.
 - Show subframe debugging position in the HUD.
 - Show CRAY FILT mode in the debug HUD.
 - Autoreload (if enabled) when attempting to save with particles out of order.
